--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "land-score",
   "private": true,
-  "homepage": "https://LandZ-in.github.io/land-score.github.io",
+  "homepage": "https://LandZ-in.github.io/land-score",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
